--- a/src/MusicPlayerOnline.Service/MusicPlayerOnline.Service.csproj
+++ b/src/MusicPlayerOnline.Service/MusicPlayerOnline.Service.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MusicPlayerOnline.Model\MusicPlayerOnline.Model.csproj" />
+    <ProjectReference Include="..\MusicPlayerOnline.Repository\MusicPlayerOnline.Repository.csproj" />
   </ItemGroup>
 
 </Project>
