1、完善 API 基础验证模块。2、新增日志接口

--- a/src/MusicPlayerOnline.Api/appsettings.json
+++ b/src/MusicPlayerOnline.Api/appsettings.json
@@ -11,6 +11,7 @@
   },
   "AppSettings": {
     "Secret": "",
-    "RefreshTokenTTL": 2
+    "RefreshTokenTTL": 2,
+    "TokenExpireDay": 15
   }
 }
