1、迁移网络服务模块。2、新增简单的本地日志模块。

--- a/src/MusicPlayerOnline.Api/MusicPlayerOnline.Api.csproj
+++ b/src/MusicPlayerOnline.Api/MusicPlayerOnline.Api.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MusicPlayerOnline.EasyLog\MusicPlayerOnline.EasyLog.csproj" />
     <ProjectReference Include="..\MusicPlayerOnline.Model\MusicPlayerOnline.Model.csproj" />
   </ItemGroup>
 
