1、支持多设备同时登录。2、优化了歌曲网络服务的逻辑。3、修改本地日志模块

--- a/src/MusicPlayerOnline.Service/MusicPlayerOnline.Service.csproj
+++ b/src/MusicPlayerOnline.Service/MusicPlayerOnline.Service.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MusicPlayerOnline.Model\MusicPlayerOnline.Model.csproj" />
+    <ProjectReference Include="..\MusicPlayerOnline.Network\MusicPlayerOnline.Network.csproj" />
     <ProjectReference Include="..\MusicPlayerOnline.Repository\MusicPlayerOnline.Repository.csproj" />
   </ItemGroup>
 
