--- a/src/MusicPlayerOnline.EasyLog/MusicPlayerOnline.EasyLog.csproj
+++ b/src/MusicPlayerOnline.EasyLog/MusicPlayerOnline.EasyLog.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="LogConfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
