--- a/src/MusicPlayerOnline.Business/MusicPlayerOnline.Business.csproj
+++ b/src/MusicPlayerOnline.Business/MusicPlayerOnline.Business.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MusicPlayerOnline.Data\MusicPlayerOnline.Data.csproj" />
     <ProjectReference Include="..\MusicPlayerOnline.Model\MusicPlayerOnline.Model.csproj" />
+    <ProjectReference Include="..\MusicPlayerOnline.Network\MusicPlayerOnline.Network.csproj" />
   </ItemGroup>
 
 </Project>
