1、重构token 验证模块 2、新增用户登录和注册

--- a/src/MusicPlayerOnline.Data/MusicPlayerOnline.Data.csproj
+++ b/src/MusicPlayerOnline.Data/MusicPlayerOnline.Data.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MusicPlayerOnline.Common\MusicPlayerOnline.Common.csproj" />
     <ProjectReference Include="..\MusicPlayerOnline.Model\MusicPlayerOnline.Model.csproj" />
   </ItemGroup>
 
