1、日志模块。2、完善播放组件

--- a/src/MusicPlayerOnline.Maui/MusicPlayerOnline.Maui.csproj
+++ b/src/MusicPlayerOnline.Maui/MusicPlayerOnline.Maui.csproj
@@ -63,6 +63,9 @@
 	  <MauiXaml Update="Pages\CacheCleanPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\LogPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
