1、优化注册页、设置页、日志页。2、修改appsettings.json的加载方式。

--- a/src/MusicPlayerOnline.Data/MusicPlayerOnline.Data.csproj
+++ b/src/MusicPlayerOnline.Data/MusicPlayerOnline.Data.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="JiuLing.CommonLibs" Version="1.2.5" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+    <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.0-pre20220318192836" />
   </ItemGroup>
 
   <ItemGroup>
