--- a/src/MusicPlayerOnline.Maui/MusicPlayerOnline.Maui.csproj
+++ b/src/MusicPlayerOnline.Maui/MusicPlayerOnline.Maui.csproj
@@ -70,6 +70,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Controls\SwitchEx.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\CacheCleanPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
