--- a/src/MusicPlayerOnline.Maui/MusicPlayerOnline.Maui.csproj
+++ b/src/MusicPlayerOnline.Maui/MusicPlayerOnline.Maui.csproj
@@ -76,6 +76,9 @@
 	  <MauiXaml Update="Pages\CacheCleanPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\LogPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
