1、修改页面样式

--- a/src/ListenTogether/appsettings.json
+++ b/src/ListenTogether/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "LocalDbName": "data.db",
+    "LocalDbName": "ListenTogether.db",
     "DeviceInfoFileName": "device",
     "ApiDomain": ""
   }
