--- a/src/ListenTogether/ListenTogether.csproj
+++ b/src/ListenTogether/ListenTogether.csproj
@@ -71,10 +71,12 @@
 		<PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-rc3" />
 		<PackageReference Include="JiuLing.CommonLibs" Version="1.2.5" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />		
+	</ItemGroup>
+	<ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
 		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
-
+	
 	<ItemGroup>
 		<ProjectReference Include="..\ListenTogether.Business\ListenTogether.Business.csproj" />
 		<ProjectReference Include="..\ListenTogether.EasyLog\ListenTogether.EasyLog.csproj" />
