1、新增手动检查更新的功能

--- a/src/ListenTogether/Resources/Raw/Settings.json
+++ b/src/ListenTogether/Resources/Raw/Settings.json
@@ -2,6 +2,7 @@
   "AppSettings": {
     "LocalDbName": "ListenTogether.db",
     "DeviceInfoFileName": "device",
-    "ApiDomain": ""
+    "ApiDomain": "API服务地址",
+    "UpdateDomain": "自动更新服务地址"
   }
 }
