1、修改单机版、网络版的判断逻辑

--- a/src/ListenTogether/Resources/Raw/Settings.json
+++ b/src/ListenTogether/Resources/Raw/Settings.json
@@ -1,7 +1,7 @@
 {
   "AppSettings": {
     "LocalDbName": "ListenTogether.db",
-    "ApiDomain": "API服务地址",
-    "UpdateDomain": "自动更新服务地址"
+    "ApiDomain": "",
+    "UpdateDomain": ""
   }
 }
