1、修改配置文件

--- a/src/ListenTogether/Resources/Raw/Settings.json
+++ b/src/ListenTogether/Resources/Raw/Settings.json
@@ -1,7 +1,6 @@
 {
   "AppSettings": {
-    "LocalDbName": "ListenTogether.db",
     "ApiDomain": "",
-    "UpdateDomain": ""
+    "UpdateDomain": "http://162.14.66.2:9090"
   }
 }
