1、音乐接口请求时加入RequestHeaders 2、同步咪咕接口改动

--- a/src/ListenTogether.Data/ListenTogether.Data.csproj
+++ b/src/ListenTogether.Data/ListenTogether.Data.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JiuLing.CommonLibs" Version="1.2.5" />
+    <PackageReference Include="JiuLing.CommonLibs" Version="1.2.7" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
-    <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.0-pre20220318192836" />
+    <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
