--- a/src/ListenTogether/ListenTogether.csproj
+++ b/src/ListenTogether/ListenTogether.csproj
@@ -20,8 +20,8 @@
 		<ApplicationId Condition="$(TargetFramework.Contains('-windows'))">DAEEFD7E-F931-420B-B6FD-DC652AD7D5B8</ApplicationId>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>1.0.53</ApplicationDisplayVersion>
-		<ApplicationVersion>58</ApplicationVersion>
+		<ApplicationDisplayVersion>1.0.54</ApplicationDisplayVersion>
+		<ApplicationVersion>59</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
@@ -78,6 +78,7 @@
 		<ProjectReference Include="..\ListenTogether.Business\ListenTogether.Business.csproj" />
 		<ProjectReference Include="..\ListenTogether.EasyLog\ListenTogether.EasyLog.csproj" />
 		<ProjectReference Include="..\ListenTogether.Model\ListenTogether.Model.csproj" />
+		<ProjectReference Include="..\NativeMediaMauiLib\NativeMediaMauiLib.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
