--- a/src/ListenTogether.Data/ListenTogether.Data.csproj
+++ b/src/ListenTogether.Data/ListenTogether.Data.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ListenTogether.Model\ListenTogether.Model.csproj" />
+    <ProjectReference Include="..\ListenTogether.Storage\ListenTogether.Storage.csproj" />
   </ItemGroup>
 
 </Project>
