--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,4 +1,4 @@
-name: 报告错误
+﻿name: 报告错误
 description: 报告一个错误
 labels: [错误]
 assignees: [JiuLing-zhang]
@@ -42,6 +42,8 @@ body:
       label: 程序版本
       description: 错误出现在哪个版本中。
       options:
+        - 1.3.0
+        - 1.2.6
         - 1.1.0
     validations:
       required: true
