--- a/src/ListenTogether.Api/ListenTogether.Api.csproj
+++ b/src/ListenTogether.Api/ListenTogether.Api.csproj
@@ -9,8 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="JiuLing.CommonLibs" Version="1.3.7" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0-rc.2.22476.2" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-rc.2.22472.11" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0-rc.2.22472.11" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-rc.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	</ItemGroup>
 
