Android端通知栏的图标，从播放组件的项目资源文件直接读取

--- a/src/NativeMediaMauiLib/NativeMediaMauiLib.csproj
+++ b/src/NativeMediaMauiLib/NativeMediaMauiLib.csproj
@@ -14,4 +14,7 @@
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
 </Project>
