--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -2,16 +2,30 @@ name: Format check on push
 on: push
 jobs:
   dotnet-format:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Add dotnet-format problem matcher
-        uses: xt0rted/dotnet-format-problem-matcher@v1
-
-      - name: Restore dotnet tools
-        uses: xt0rted/dotnet-tool-restore@v1
-
       - name: Run dotnet format
-        uses: xt0rted/dotnet-format@v1
+        run: dotnet format whitespace
+
+      - name: Commit files
+        if: steps.format.outputs.has-changes == 'true'
+        run: |
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git commit -a -m 'Automated dotnet-format update'
+
+      - name: Create Pull Request
+        if: steps.format.outputs.has-changes == 'true'
+        uses: peter-evans/create-pull-request@v3
+        with:
+          title: '[Bot] Automated PR to fix formatting errors'
+          body: |
+            Automated PR to fix formatting errors
+          committer: GitHub <noreply@github.com>
+          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
+          assignees: JiuLing-zhang
+          reviewers: JiuLing-zhang
+          branch: bot/fix-codeformatting
