--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -7,8 +7,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Install dotnet-format
+        run: dotnet tool install -g dotnet-format
+
       - name: Run dotnet format
-        run: dotnet format whitespace
+        id: format
+        uses: jfversluis/dotnet-format@v1.0.5
+        with:
+          repo-token: $
+          action: "fix"
+          only-changed-files: true
 
       - name: Commit files
         if: steps.format.outputs.has-changes == 'true'
