--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,5 +1,7 @@
 name: Auto-merge Dependabot
-on: pull_request
+on:
+  pull_request:
+    branches: [bot/fix-codeformatting]
 
 permissions:
   pull-requests: write
