--- a/src/ListenTogether/ListenTogether.csproj
+++ b/src/ListenTogether/ListenTogether.csproj
@@ -81,4 +81,7 @@
 	<ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
 		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Messages\" />
+	</ItemGroup>
 </Project>
