--- a/src/ListenTogether.Data/ListenTogether.Data.csproj
+++ b/src/ListenTogether.Data/ListenTogether.Data.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ListenTogether.EasyLog\ListenTogether.EasyLog.csproj" />
     <ProjectReference Include="..\ListenTogether.Model\ListenTogether.Model.csproj" />
     <ProjectReference Include="..\ListenTogether.Storage\ListenTogether.Storage.csproj" />
   </ItemGroup>
