--- a/src/ListenTogether/Resources/Raw/NetConfig.json
+++ b/src/ListenTogether/Resources/Raw/NetConfig.json
@@ -1,4 +1,4 @@
 {
-  "UpdateDomain": "",
-  "ApiDomain": ""
+  "UpdateDomain": "http://162.14.66.2:9000/api/app/c2bb0896e0dd39a424feb6eb186b32b7",
+  "ApiDomain": "http://162.14.66.2:9518"
 }
