--- a/src/ListenTogether.Api/appsettings.json
+++ b/src/ListenTogether.Api/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": ""
+    "DbConnection": "Server=localhost;Port=6662;Database=ListenTogether;User Id=jiuling;Password=gb1T3q*gcs5uv%DN;"
   },
   "AppSettings": {
-    "Secret": "",
+    "Secret": "ubnid9LdcK2wLae4ubnixxxxd9LdcK2wLae4",
     "RefreshTokenTTL": 2,
-    "TokenExpireDay": 15
+    "TokenExpireDay": 30
   }
 }
