--- a/src/ListenTogether/ListenTogether.csproj
+++ b/src/ListenTogether/ListenTogether.csproj
@@ -82,6 +82,9 @@
 		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup>
+	  <MauiXaml Update="Controls\FavoriteView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Controls\MessageDialog.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
