重构发现页（系统的 Tab 在 Android 下有问题）

--- a/src/ListenTogether/ListenTogether.csproj
+++ b/src/ListenTogether/ListenTogether.csproj
@@ -91,6 +91,9 @@
 		<MauiXaml Update="Pages\ChooseMyFavoritePage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="Pages\DiscoverPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 	</ItemGroup>
 
 </Project>
