--- a/src/ListenTogether.Data/ListenTogether.Data.csproj
+++ b/src/ListenTogether.Data/ListenTogether.Data.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="JiuLing.CommonLibs" Version="1.5.6" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.4" />
 	</ItemGroup>
